--- a/editar.ui
+++ b/editar.ui
@@ -221,24 +221,6 @@
      <string>Renda</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="txtAlterarNome">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>249</y>
-      <width>391</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>14</pointsize>
-     </font>
-    </property>
-    <property name="inputMask">
-     <string>000</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_9">
     <property name="enabled">
      <bool>true</bool>
@@ -443,6 +425,24 @@ background-color: rgb(0, 0, 0);</string>
     </property>
     <property name="text">
      <string>Editar</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="txtAlterarNome">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>250</y>
+      <width>521</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="placeholderText">
+     <string/>
     </property>
    </widget>
   </widget>
